# get-snirh

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: example_gwl_algarve.ipynb
src/get_snirh/: __init__.py  client.py  constants.py  data.py  stations.py
tests/: test_live.py  test_performance.py  test_stations.py
