[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "get-snirh"
version = "0.1.0"
description = "A Python package to automate downloading water resource data from SNIRH"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.0.0",
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://github.com/rhugman/get-snirh"
